adjusted about us text in application. It didnt wrap correctly but it does now

--- a/jdphotography/src/components/LowerBodyContent/styles.css
+++ b/jdphotography/src/components/LowerBodyContent/styles.css
@@ -1,5 +1,6 @@
 .body-content-img {
     /* border: solid red 10px; */
+    display: inline;
     float: left;
     height: 200px;
     width: 400px;
@@ -7,13 +8,12 @@
 }
 
 .body-paragraph {
-    color: black;
-    text-align: left;
-    background-color: white;
-    /* box-shadow:2px 4px 9px .25rem rgba(0,0,0,0.3); */
+    color: white;
+    text-align: center;
+    display: inline;
     height: 200px;
-    /* text-align: left; */
-    /* border: solid blue 10px; */
+    width: 400px;
+
     
 }
 
